reduec size of image

--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 
 <p>{{content}}</p>
-        <img src='/images/prekclass.jpg' />
+        <img src='/images/prekclass.jpg' style="width:600px;" />
 <ul>
   <li>
     <a href="/other">The Other Page</a>
