initial commit with gallery

--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -1,14 +1,67 @@
-<h1>{{title}}</h1>
+  <div class="main_image"> 
+    <img src="/images/prekclass.jpg" alt="- prek" /> 
+    <div class="desc"> 
+      <a href="#" class="collapse">Close Me!</a> 
+      <div class="block"> 
+        <h2>Preschool Class</h2> 
+        <small>06/26/2011</small> 
+        
+        <p>{{prekclass}}</p> 
+      </div> 
+    </div> 
+  </div> 
+  <div class="image_thumb"> 
+    <ul> 
+      <li> 
+        <a href="/images/prekclass.jpg"><img src="/images/prekclass_thumb.jpg" alt="prek" /></a> 
+        <div class="block"> 
+          <h2>Preschool Class</h2> 
+          <small>06/26/2011</small> 
+          
+          <p>Autem conventio nimis quis ad, nisl secundum sed, facilisi, vicis augue regula, ratis, autem. Neo nostrud letatio aliquam validus eum quadrum, volutpat et.<br /><a href="http://store.glennz.com/slowingdown.html" target="_blank">Artwork By Glenn Jones</a> </p> 
+        </div> 
+      </li> 
+      <li> 
+        <a href="banner2.jpg"><img src="banner2_thumb.jpg" alt="Organized Food Fight" /></a> 
+        <div class="block"> 
+          <h2>Organized Food Fight</h2> 
+          <small>04/11/09</small> 
+          <p>Autem conventio nimis quis ad, nisl secundum sed, facilisi, vicis augue regula, ratis, autem. Neo nostrud letatio aliquam validus eum quadrum, volutpat et. Autem conventio nimis quis ad, nisl secundum sed, facilisi, vicis augue regula, ratis, autem. Neo nostrud letatio aliquam validus eum quadrum, volutpat et.</p> 
+          <p>Autem conventio nimis quis ad, nisl secundum sed, facilisi, vicis augue regula, ratis, autem. Neo nostrud letatio aliquam validus eum quadrum, volutpat et.<br /><a href="http://store.glennz.com/orfofi.html" target="_blank">Artwork By Glenn Jones</a></p> 
+        </div> 
+      </li> 
+      <li> 
+        <a href="banner3.jpg"><img src="banner3_thumb.jpg" alt="Endangered Species" /></a> 
+        <div class="block"> 
+          <h2>Endangered Species</h2> 
+          <small>04/12/09</small> 
+          <p>Autem conventio nimis quis ad, nisl secundum sed, facilisi, vicis augue regula, ratis, autem. Neo nostrud letatio aliquam validus eum quadrum, volutpat et.<br /><a href="http://store.glennz.com/ensp.html" target="_blank">Artwork By Glenn Jones</a></p> 
+        </div> 
+      </li> 
+      <li> 
+        <a href="banner4.jpg"><img src="banner4_thumb.jpg" alt="Evolution" /></a> 
+        <div class="block"> 
+          <h2>Evolution</h2> 
+          <small>04/13/09</small> 
+          <p>Autem conventio nimis quis ad, nisl secundum sed, facilisi, vicis augue regula, ratis, autem. Neo nostrud letatio aliquam validus eum quadrum, volutpat et. Autem conventio nimis quis ad, nisl secundum sed, facilisi, vicis augue regula, ratis, autem. Neo nostrud letatio aliquam validus eum quadrum, volutpat et.<br /><a href="http://store.glennz.com/evolution.html" target="_blank">Artwork By Glenn Jones</a></p> 
+        </div> 
+      </li> 
+      <li> 
+        <a href="banner5.jpg"><img src="banner5_thumb.jpg" alt="Puzzled Putter" /></a> 
+        <div class="block"> 
+          <h2>Puzzled Putter</h2> 
+          <small>04/14/09</small> 
+          <p>Autem conventio nimis quis ad, nisl secundum sed, facilisi, vicis augue regula, ratis, autem. Neo nostrud letatio aliquam validus eum quadrum, volutpat et. <br /><a href="http://store.glennz.com/puzzledputter.html" target="_blank">Artwork By Glenn Jones</a></p> 
+        </div> 
+      </li> 
+      <li> 
+        <a href="/images/banner6.jpg"><img src="/images/banner6_thumb.jpg" alt="Secret Habit" /></a> 
+        <div class="block"> 
+          <h2>Secret Habit</h2> 
+          <small>04/15/09</small> 
+          <p>Autem conventio nimis quis ad, nisl secundum sed, facilisi, vicis augue regula, ratis, autem.<br /><a href="http://store.glennz.com/secrethabit1.html" target="_blank">Artwork By Glenn Jones</a></p> 
+        </div> 
+      </li> 
+    </ul> 
+  </div> 
 
-<p>{{content}}</p>
-        <img src='/images/prekclass.jpg' style="width:600px;" />
-<ul>
-  <li>
-    <a href="/other">The Other Page</a>
-  </li>
-  <li>
-    <a href="/nolayout">A Page Without a Layout</a>
-  </li>
-</ul>
-
-{{> partial}}
