first add to template

--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -13,12 +13,12 @@
   <div class="image_thumb"> 
     <ul> 
       <li> 
-        <a href="/images/prekclass.jpg"><img src="/images/prekclass_thumb.jpg" alt="prek" /></a> 
+        <a href="/images/twentyfivedollartip.jpg"><img src="/images/twentyfivedollartip.thumnail.jpg" alt="prek" /></a> 
         <div class="block"> 
-          <h2>Preschool Class</h2> 
-          <small>06/26/2011</small> 
+          <h2>Fido Hydrant</h2> 
+          <small>El Vaquero</small> 
           
-          <p>Autem conventio nimis quis ad, nisl secundum sed, facilisi, vicis augue regula, ratis, autem. Neo nostrud letatio aliquam validus eum quadrum, volutpat et.<br /><a href="http://store.glennz.com/slowingdown.html" target="_blank">Artwork By Glenn Jones</a> </p> 
+          <p>El Vaquero invited me to twist becuase they feel balloons help add to a family ethos.  They help even more to do this by feeding me so that I, in turn, can keep my prices reasonably low and still benefit.  Just about every kid gets a balloon and is very happy with their experience. </p> 
         </div> 
       </li> 
       <li> 
