--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -9,7 +9,7 @@ h1 {
   font: 3em normal Georgia, "Times New Roman", Times, serif;
   color: #fff;
   text-align: center;
-  background: url(/images/h1_bg.gif) no-repeat;
+  background: url(/images/h1_bg.png) no-repeat;
   text-indent: -99999px;
   margin: 100px 0 10px;
 }
