--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -1,12 +1,12 @@
   <div class="main_image"> 
-    <img src="/images/prekclass.jpg" alt="- prek" /> 
+    <img src="/images/twentyfivedollartip.jpg" alt="- booyah!" /> 
     <div class="desc"> 
       <a href="#" class="collapse">Close Me!</a> 
       <div class="block"> 
-        <h2>Preschool Class</h2> 
-        <small>06/26/2011</small> 
-        
-        <p>{{prekclass}}</p> 
+          <h2>Fido Hydrant</h2> 
+          <small>El Vaquero</small> 
+          
+          <p>El Vaquero invited me to twist becuase they feel balloons help add to a family ethos.  They help even more to do this by feeding me so that I, in turn, can keep my prices reasonably low and still benefit.  Just about every kid gets a balloon and is very happy with their experience. </p> 
       </div> 
     </div> 
   </div> 
